force-app/main/default/objects/Product2/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se l&apos;offerta è Billabile</description>
    <label>Billabile</label>
    <type>Checkbox</type>
</CustomField>