force-app/main/default/objects/Product2/fields/CategoryFamily__c.field-meta.xml
<CustomField>
    <fullName>CategoryFamily__c</fullName>
    <description>&quot;La categorie/famiglie offerte la cui  selezione è a carico del CM
    contenente la categorie/famiglie offerte la selezione è a carico del CM
&quot;</description>
    <label>Categoria Famiglia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.R.E.R.A</fullName>
            </value>
            <value>
                <fullName>Arera Ranton</fullName>
            </value>
            <value>
                <fullName>Delibera 153/12</fullName>
            </value>
            <value>
                <fullName>Energia Serena</fullName>
            </value>
            <value>
                <fullName>Giorno Hera</fullName>
            </value>
            <value>
                <fullName>Giorno Hera Hcp Lucca</fullName>
            </value>
            <value>
                <fullName>Hello Hera</fullName>
            </value>
            <value>
                <fullName>Hello Ranton</fullName>
            </value>
            <value>
                <fullName>Hera Bebè</fullName>
            </value>
            <value>
                <fullName>Hera Etapiu</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero</fullName>
            </value>
            <value>
                <fullName>Hera Welfare</fullName>
            </value>
            <value>
                <fullName>Indicizzato Ranton</fullName>
            </value>
            <value>
                <fullName>Mercato Libero Cmv</fullName>
            </value>
            <value>
                <fullName>Nuova Idea</fullName>
            </value>
            <value>
                <fullName>Nuova Idea Ranton</fullName>
            </value>
            <value>
                <fullName>Nuova Idea Tlr</fullName>
            </value>
            <value>
                <fullName>Offerta Gas Ranton</fullName>
            </value>
            <value>
                <fullName>Placet</fullName>
            </value>
            <value>
                <fullName>Prezzo Fisso</fullName>
            </value>
            <value>
                <fullName>Prezzo Fisso Leggero</fullName>
            </value>
            <value>
                <fullName>Prezzo Fisso Ranton</fullName>
            </value>
            <value>
                <fullName>Prezzo Fisso Tlr</fullName>
            </value>
            <value>
                <fullName>Prezzo Indicizzato Ranton</fullName>
            </value>
            <value>
                <fullName>Prezzo Netto</fullName>
            </value>
            <value>
                <fullName>Prezzo Netto Amga</fullName>
            </value>
            <value>
                <fullName>Prezzo Netto Comunita Solare</fullName>
            </value>
            <value>
                <fullName>Prezzo Netto Ranton</fullName>
            </value>
            <value>
                <fullName>Prezzo Netto Tlr</fullName>
            </value>
            <value>
                <fullName>Prezzo Sicurezza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>