force-app/main/default/objects/Product2/fields/ClientAge__c.field-meta.xml
<CustomField>
    <fullName>ClientAge__c</fullName>
    <description>la fascia di età del Prodotto nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Eta Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ClientAge</valueSetName>
    </valueSet>
</CustomField>