force-app/main/default/objects/Product2/fields/ConstraintDiscountEurGiorno__c.field-meta.xml
<CustomField>
    <fullName>ConstraintDiscountEurGiorno__c</fullName>
    <description>Vincolo dello sconto Euro per Giorni</description>
    <label>Vincolo Sconto Eur/Giorno (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>