force-app/main/default/objects/Product2/fields/ConstraintDiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>ConstraintDiscountPercentage__c</fullName>
    <description>Vincolo dello sconto percentuale espresso in giorni</description>
    <label>Vincolo Sconto Percentuale (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>