force-app/main/default/objects/Product2/fields/Consumption__c.field-meta.xml
<CustomField>
    <fullName>Consumption__c</fullName>
    <description>Consumo &gt; 2700 kWh</description>
    <label>Consumo &gt; 2700 kWh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>