force-app/main/default/objects/Product2/fields/ConsumptionRangeEE__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEE__c</fullName>
    <description>la fascia di consumo EE del dato record di Prodotto nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Fasce Consumo EE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>