force-app/main/default/objects/Product2/fields/ConsumptionRangeEle__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEle__c</fullName>
    <formula>TEXT(Range__r.RangeConsumptionEle__c)</formula>
    <label>Fasce Consumo EE</label>
    <type>Text</type>
</CustomField>