force-app/main/default/objects/Product2/fields/ConsumptionRangeGas__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGas__c</fullName>
    <description>la fascia di consumo GAS del dato record di Prodotto nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Fasce Consumo Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>