force-app/main/default/objects/Product2/fields/ContinuityChangeOffer__c.field-meta.xml
<CustomField>
    <fullName>ContinuityChangeOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se ci sta continuità cambio offerta</description>
    <label>Continuita Cambio Offerta</label>
    <type>Checkbox</type>
</CustomField>