force-app/main/default/objects/Product2/fields/DayNotice__c.field-meta.xml
<CustomField>
    <fullName>DayNotice__c</fullName>
    <description>Giorni di preavviso necessari</description>
    <label>Giorni di Preavviso</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>