force-app/main/default/objects/Product2/fields/DelayDay__c.field-meta.xml
<CustomField>
    <fullName>DelayDay__c</fullName>
    <description>Delay (gg)</description>
    <label>Delay (gg)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>