force-app/main/default/objects/Product2/fields/DelayDayGas__c.field-meta.xml
<CustomField>
    <fullName>DelayDayGas__c</fullName>
    <description>Delay gas (gg)</description>
    <label>Delay gas (gg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>