force-app/main/default/objects/Product2/fields/DelayDiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DelayDiscountPercentage__c</fullName>
    <description>Ritardo per l&apos;applicazione dello sconto percentuale</description>
    <label>Ritardo sconto percentuale (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>