force-app/main/default/objects/Product2/fields/DelayExemption__c.field-meta.xml
<CustomField>
    <fullName>DelayExemption__c</fullName>
    <description>Ritardo esenzione in giorni</description>
    <label>Ritardo esenzione (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>