force-app/main/default/objects/Product2/fields/DescriptionSAP__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSAP__c</fullName>
    <description>Descrizione del prodotto come su DB SAP</description>
    <label>Descrizione SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>