force-app/main/default/objects/Product2/fields/DurationDay__c.field-meta.xml
<CustomField>
    <fullName>DurationDay__c</fullName>
    <description>Durata (gg)</description>
    <label>Durata (gg)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>