force-app/main/default/objects/Product2/fields/DurationDayGas__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGas__c</fullName>
    <description>Durata gas (gg)</description>
    <label>Durata gas (gg)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>