force-app/main/default/objects/Product2/fields/DurationDiscountEuroGiorno__c.field-meta.xml
<CustomField>
    <fullName>DurationDiscountEuroGiorno__c</fullName>
    <description>Durata dell&apos;applicazione sconto Euro per Giorno</description>
    <label>Durata sconto Eur/Giorno (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>