force-app/main/default/objects/Product2/fields/DurationDiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DurationDiscountPercentage__c</fullName>
    <description>Durata dell&apos;applicazione sconto percentuale</description>
    <label>Durata sconto Percentuale (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>