force-app/main/default/objects/Product2/fields/DurationVAS__c.field-meta.xml
<CustomField>
    <fullName>DurationVAS__c</fullName>
    <description>VAS - Durata</description>
    <label>VAS - Durata</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>