force-app/main/default/objects/Product2/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Data fine</description>
    <label>Data fine</label>
    <type>Date</type>
</CustomField>