force-app/main/default/objects/Product2/fields/EquipmentType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentType__c</fullName>
    <description>Tipo Apparecchiatura</description>
    <label>Tipo Apparecchiatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_MeterType</valueSetName>
    </valueSet>
</CustomField>