force-app/main/default/objects/Product2/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Riferimento Id per Externo</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>