force-app/main/default/objects/Product2/fields/GeneralContractConditions__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractConditions__c</fullName>
    <description>Condizioni Generali contratto</description>
    <label>Condizioni Generali contratto</label>
    <length>25</length>
    <type>Text</type>
</CustomField>