force-app/main/default/objects/Product2/fields/IntegratedSAP__c.field-meta.xml
<CustomField>
    <fullName>IntegratedSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrato SAP per TARI</label>
    <type>Checkbox</type>
</CustomField>