force-app/main/default/objects/Product2/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <description>IVA</description>
    <label>IVA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>