force-app/main/default/objects/Product2/fields/JoinInvoice__c.field-meta.xml
<CustomField>
    <fullName>JoinInvoice__c</fullName>
    <label>Fatturare congiuntamente a parità di CA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contr.deve essere fatt.congiu</fullName>
            </value>
            <value>
                <fullName>contr.può essere fatt.congiu</fullName>
            </value>
            <value>
                <fullName>contr.no può essere fatt.cong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>