force-app/main/default/objects/Product2/fields/NoOrderable__c.field-meta.xml
<CustomField>
    <fullName>NoOrderable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizzato come filtro per la migrazione</description>
    <label>Non Ordinabile</label>
    <type>Checkbox</type>
</CustomField>