force-app/main/default/objects/Product2/fields/NoSellable__c.field-meta.xml
<CustomField>
    <fullName>NoSellable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizzato in UI per rendere un offerta non vendibile dal CM indipendentemente dallo stato</description>
    <label>Non Vendibile</label>
    <type>Checkbox</type>
</CustomField>