force-app/main/default/objects/Product2/fields/NumberRateMonthly__c.field-meta.xml
<CustomField>
    <fullName>NumberRateMonthly__c</fullName>
    <description>Numero delle rate mensili</description>
    <label>Numero Rate Mensili</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>