force-app/main/default/objects/Product2/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Percentuale</description>
    <label>Percentuale</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>