force-app/main/default/objects/Product2/fields/PercentageF1__c.field-meta.xml
<CustomField>
    <fullName>PercentageF1__c</fullName>
    <description>Percentuale consumo fascia F1</description>
    <label>Percentuale F1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>