force-app/main/default/objects/Product2/fields/PercentagePickOut__c.field-meta.xml
<CustomField>
    <fullName>PercentagePickOut__c</fullName>
    <description>Percentuale di consumo fuori picco</description>
    <label>Percentuale Fuori Picco</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>