force-app/main/default/objects/Product2/fields/PowerFlow__c.field-meta.xml
<CustomField>
    <fullName>PowerFlow__c</fullName>
    <formula>Range__r.PowerFlow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potenza portata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>