force-app/main/default/objects/Product2/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Prezzo</description>
    <label>Prezzo</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>