force-app/main/default/objects/Product2/fields/PriceBonusGas__c.field-meta.xml
<CustomField>
    <fullName>PriceBonusGas__c</fullName>
    <description>Prezzo Bonus Gas</description>
    <label>Prezzo Bonus Gas</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>