force-app/main/default/objects/Product2/fields/PriceF0__c.field-meta.xml
<CustomField>
    <fullName>PriceF0__c</fullName>
    <description>Prezzo F0 del dato record di Prodotto nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Prezzo F0</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>