force-app/main/default/objects/Product2/fields/PriceF3__c.field-meta.xml
<CustomField>
    <fullName>PriceF3__c</fullName>
    <description>Prezzo F3 del dato record di Prodotto nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Prezzo F3</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>