force-app/main/default/objects/Product2/fields/PriceFromThirds__c.field-meta.xml
<CustomField>
    <fullName>PriceFromThirds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prezzo da Terzi	Prezzo da Terzi VAS</description>
    <label>Prezzo da Terzi</label>
    <type>Checkbox</type>
</CustomField>