force-app/main/default/objects/Product2/fields/PriceGas__c.field-meta.xml
<CustomField>
    <fullName>PriceGas__c</fullName>
    <description>Prezzo Bonus Gas</description>
    <label>Prezzo Bonus Gas</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>