force-app/main/default/objects/Product2/fields/PriceNet__c.field-meta.xml
<CustomField>
    <fullName>PriceNet__c</fullName>
    <description>Il prezzo netto scelto dal CM per il dato record di prodotto</description>
    <label>Prezzo Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>