force-app/main/default/objects/Product2/fields/PricePick__c.field-meta.xml
<CustomField>
    <fullName>PricePick__c</fullName>
    <label>Prezzo Picco</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>