force-app/main/default/objects/Product2/fields/PricePickOut__c.field-meta.xml
<CustomField>
    <fullName>PricePickOut__c</fullName>
    <description>Prezzo Fuori Picco</description>
    <label>Prezzo Fuori Picco</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>