force-app/main/default/objects/Product2/fields/ProductImage__c.field-meta.xml
<CustomField>
    <fullName>ProductImage__c</fullName>
    <description>Immagine del prodotto</description>
    <formula>Image(ProductImageLink__c , &quot;&quot; , 32,32)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Immagine Prodotto</label>
    <type>Text</type>
</CustomField>