force-app/main/default/objects/Product2/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fascia</label>
    <referenceTo>Range__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>