force-app/main/default/objects/Product2/fields/RateCategory__c.field-meta.xml
<CustomField>
    <fullName>RateCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RateCategory</description>
    <label>Rate Template</label>
    <referenceTo>RateTemplate__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>