force-app/main/default/objects/Product2/fields/ReferenceMarket__c.field-meta.xml
<CustomField>
    <fullName>ReferenceMarket__c</fullName>
    <label>Mercato di riferimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regolamentato</fullName>
            </value>
            <value>
                <fullName>Tutela</fullName>
            </value>
            <value>
                <fullName>Libero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>