force-app/main/default/objects/Product2/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se l&apos;ogfferta è rinnovabile</description>
    <label>Rinnovabile</label>
    <type>Checkbox</type>
</CustomField>