force-app/main/default/objects/Product2/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>il servizio del dato record di Prodotto nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Commodity</valueSetName>
    </valueSet>
</CustomField>