force-app/main/default/objects/Product2/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data inizio</description>
    <label>Data inizio</label>
    <type>Date</type>
</CustomField>