force-app/main/default/objects/Product2/fields/StartTimeSlot__c.field-meta.xml
<CustomField>
    <fullName>StartTimeSlot__c</fullName>
    <description>Indica l&apos;inizio della fascia oraria (BRIM)</description>
    <label>Inizio fascia oraria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_TimeSlot</valueSetName>
    </valueSet>
</CustomField>