force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Stato</description>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annullata</fullName>
            </value>
            <value>
                <fullName>Confermata</fullName>
            </value>
            <value>
                <fullName>In Sviluppo</fullName>
            </value>
            <value>
                <fullName>Vendibile</fullName>
            </value>
            <value>
                <fullName>Scaduta</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>