force-app/main/default/objects/Product2/fields/SupplyType__c.field-meta.xml
<CustomField>
    <fullName>SupplyType__c</fullName>
    <label>Tipo Fornitura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestico</fullName>
            </value>
            <value>
                <fullName>Non Domestico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>