force-app/main/default/objects/Product2/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <formula>RateCategory__r.ContractTemplate__c</formula>
    <label>Template</label>
    <type>Text</type>
</CustomField>