force-app/main/default/objects/Product2/fields/TextInPrint__c.field-meta.xml
<CustomField>
    <fullName>TextInPrint__c</fullName>
    <description>Testo In Stampa</description>
    <label>Testo In Stampa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>