force-app/main/default/objects/Product2/fields/TypeOffer__c.field-meta.xml
<CustomField>
    <fullName>TypeOffer__c</fullName>
    <label>Tipologia Offerta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OfferType</valueSetName>
    </valueSet>
</CustomField>