force-app/main/default/objects/Product2/fields/VASBillingMode__c.field-meta.xml
<CustomField>
    <fullName>VASBillingMode__c</fullName>
    <description>Possibili modalità di Faturazione VAS per il dato record di prodotto.</description>
    <label>Modalità di Fatturazione VAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillingModeVAS</valueSetName>
    </valueSet>
</CustomField>