force-app/main/default/objects/Product2/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>la versione del dato record di Prodotto nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Versione</label>
    <length>100</length>
    <type>Text</type>
</CustomField>