force-app/main/default/objects/Product2/fields/VersionDescr__c.field-meta.xml
<CustomField>
    <fullName>VersionDescr__c</fullName>
    <formula>Name+&quot;_&quot;+ Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DescrizioneVersione</label>
    <type>Text</type>
</CustomField>