force-app/main/default/objects/Product2/validationRules/DescriptionSAP_length_30.validationRule-meta.xml
<ValidationRule>
    <fullName>DescriptionSAP_length_30</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(DescriptionSAP__c) &gt;30,   ISPICKVAL(Family, &apos;Offerta Commerciale&apos;))</errorConditionFormula>
    <errorMessage>La descrizione SAP non può contenere più di 30 caratteri</errorMessage>
</ValidationRule>