force-app/main/default/objects/Product2/validationRules/ProductCode_length_10.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductCode_length_10</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(ProductCode) &gt;10,   ISPICKVAL(Family, &apos;Offerta Commerciale&apos;), NOT(CONTAINS(LOWER(ProductCode), &apos;template&apos;)))</errorConditionFormula>
    <errorMessage>Il codice del prodotto non può contenere più di 10 caratteri</errorMessage>
</ValidationRule>