force-app/main/default/objects/Product2/validationRules/Verifica_valore_consumo_VAS.validationRule-meta.xml
<ValidationRule>
    <fullName>Verifica_valore_consumo_VAS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TEXT(Family) = &apos;VAS Prodotto&apos;,TEXT(Family) =&apos;VAS Servizio&apos;),
				ConsumptionAnnualVAS__c &lt;&gt;0,ConsumptionAnnualVAS__c&lt;&gt;2000)</errorConditionFormula>
    <errorMessage>Il consumo annuo VAS deve essere valorizzato con 0 oppure 2000</errorMessage>
</ValidationRule>