force-app/main/default/objects/Product2/listViews/Contenitori.listView-meta.xml
<ListView>
    <fullName>Contenitori</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>CONT</value>
    </filters>
    <label>Contenitori</label>
</ListView>