force-app/main/default/objects/Product2/listViews/Offerte.listView-meta.xml
<ListView>
    <fullName>Offerte</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>notContain</operation>
        <value>TEMPLATE</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Offerta commerciale</value>
    </filters>
    <label>Offerte</label>
</ListView>